--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/">
     <title>Flex live coding</title>
+    <link rel="stylesheet" href="assets/debug.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
-<body>
-    
+<body class="debug"> 
+    <header></header>
+
+    <div class="row">
+        <main></main>
+        <aside></aside>
+    </div>
+
+    <footer></footer>
 </body>
 </html>
